--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,8 +13,16 @@ Layout/HashAlignment:
 Lint/MissingSuper:
   Exclude:
     - 'lib/tls_map/cli/cli.rb'
+Metrics/AbcSize:
+  Exclude:
+    - 'lib/unisec/properties.rb'
+Metrics/ClassLength:
+  Exclude:
+    - 'lib/unisec/properties.rb'
 Metrics/MethodLength:
   Max: 20
+  Exclude:
+    - 'lib/unisec/properties.rb'
 Naming/MethodParameterName:
   Exclude:
     - 'lib/unisec/surrogates.rb'
